plugins {
    id 'java'
    id 'io.freefair.lombok' version '8.3'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation 'io.rest-assured:rest-assured:5.4.0'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    implementation project(':api')

    testImplementation 'org.springframework:spring-web:6.2.8'
    testImplementation'org.springframework.boot:spring-boot-starter-test:3.2.5'
    testImplementation'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-amqp:3.2.5'

    testImplementation 'org.assertj:assertj-core:3.27.7'

    testImplementation 'io.cucumber:cucumber-java:7.14.0'
    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.0'
    testImplementation 'io.cucumber:cucumber-spring:7.14.0'
    testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.2'

    testImplementation 'org.wiremock:wiremock:3.4.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'

    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'

    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'io.qameta.allure:allure-cucumber7-jvm:2.24.0'
    testImplementation 'io.qameta.allure:allure-junit5:2.24.0'

    testImplementation 'org.awaitility:awaitility:4.2.0'

    testImplementation 'org.springframework:spring-jdbc:6.1.3'

    testImplementation 'net.java.dev.jna:jna:5.13.0' //
}

test {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "test"
    jvmArgs(
            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
            "--add-opens", "java.base/java.util=ALL-UNNAMED"
    )
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }

    if (project.hasProperty('smoke')) {
        systemProperty 'cucumber.filter.tags', '@smoke'
    }
}

tasks.register('smokeTest', Test) {
    useJUnitPlatform()
    systemProperty "spring.profiles.active", "test"
    jvmArgs(
            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
            "--add-opens", "java.base/java.util=ALL-UNNAMED"
    )
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
    systemProperty 'cucumber.filter.tags', '@smoke'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    shouldRunAfter test
}